# rust-jira-mcp

./: .llvm-cov  .pre-commit-config.yaml  CHANGELOG.md  CONFIGURATION.md  COVERAGE.md  Cargo.toml  GITHUB_RELEASE.md  GITHUB_RELEASE_v0.4.0.md  Makefile  README.md  REFACTOR_LIST_TOOLS.md  RELEASE_NOTES.md  clippy.toml  codecov.yml  coverage-config.toml  debug_curl.sh  env.example  lcov.info  rusty-hook.toml
.github/workflows/: ci.yml  coverage.yml  pr-coverage.yml
benches/: async_benchmarks.rs  cache_benchmarks.rs  integration_benchmarks.rs  jira_client_benchmarks.rs
config/: default.toml  secrets.toml.example
debug/: README.md  debug_curl.sh
docs/: README.md  configuration-examples.md  getting-started.md  performance-guide.md  performance.md  tool-examples.md  troubleshooting.md
examples/: bulk_operations_example.rs  configuration_example.rs  project_metadata_example.rs  simple_config_example.rs
scripts/: anonymize_fixtures.py  check-allows.sh  coverage-analyzer.sh  coverage-app.sh  coverage-quick.sh  coverage-simple.sh  coverage.sh  setup-codecov.sh
src/: lib.rs  main.rs  test_usage.rs
src/config/: jira.rs  manager.rs  mod.rs  secrets.rs  validation.rs
src/error/: jira.rs  mod.rs
src/jira/: client.rs  client.rs.backup  optimized_client.rs
src/jira/operations/: mod.rs  zephyr.rs
src/logging/: config.rs  metrics.rs  mod.rs  tracing_setup.rs
src/mcp/: mod.rs  server.rs  tools.rs  zephyr_tools.rs
src/mcp/tools/: attachments.rs  auth.rs  bulk.rs  cloning.rs  comments.rs  components.rs  issues.rs  labels.rs  linking.rs  mod.rs  projects.rs  sprints.rs  transitions.rs  watchers.rs  worklogs.rs
src/performance/: async_optimizer.rs  cache.rs  jira_client.rs  metrics.rs  mod.rs  monitoring.rs  optimized_client.rs  profiler.rs
src/test_utils/: fixtures.rs  helpers.rs  mocks.rs  mod.rs
src/types/: jira.rs  mcp.rs  mod.rs
src/utils/: response.rs
tests/: bulk_operations_test.rs  config_jira_test.rs  config_manager_test.rs  config_secrets_test.rs  configuration_test.rs  debug_hanging_test.rs  error_test.rs  jira_client_integration_test.rs  jira_client_test.rs  logging_test.rs  main_application_test.rs  main_integration_test.rs  mcp_server_integration_test.rs  mcp_server_test.rs  mcp_tools_test.rs  sprint_tools_test.rs  types_test.rs  utils_test.rs  validation_test.rs  zephyr_integration_test.rs
tests/fixtures/: README.md  issue_test_cases.json  mock_data_generator.py  project_test_cases.json  search_test_cases.json  system_metadata.json  test-mcp_issues_search.json  test-mcp_project_config.json  user_test_cases.json
tests/integration/: jira_client_integration_test.rs  mcp_server_integration_test.rs
tests/unit/: jira_client_test.rs
xtask/: Cargo.toml
xtask/src/: enhanced_mcp_tester.rs  fixture_collector.rs  fixture_test_runner.rs  main.rs  mcp_tester.rs  test_runner.rs
