[package]
name = "rust-jira-mcp"
version = "0.2.0"
edition = "2021"
authors = ["GarthDB <garthdb@example.com>"]
description = "A high-performance Rust-based MCP server for Jira API integration"
license = "MIT"
repository = "https://github.com/GarthDB/rust-jira-mcp"
keywords = ["mcp", "jira", "api", "server", "model-context-protocol"]
categories = ["api-bindings", "development-tools"]

[workspace]
members = [
    "xtask"
]
exclude = [
    "test_http"
]

[[bin]]
name = "rust-jira-mcp"
path = "src/main.rs"

[dependencies]
# MCP Protocol - using serde_json for now, will find proper MCP crate
# mcp = "0.1.0"  # Will need to find the correct crate name

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"
notify = "6.0"
toml = "0.8"
yaml-rust = "0.4"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.21"
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.20"

# Validation - removed unused validator dependency that had security vulnerabilities

# Utilities
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
base64 = "0.21"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Performance optimization
dashmap = "5.5"
moka = { version = "0.12", features = ["future"] }
bytes = "1.5"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
tempfile = "3.0"
# Performance and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
flamegraph = "0.4"
pprof = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"